package DesignPatterns.Factory.AbstractFactory.CPU;

/**
 * @author Yu
 */
public class A11 extends CPU {
    @Override
    public void run() {
        System.out.println("A11");
    }
}
