package DesignPatterns.Factory.AbstractFactory.CPU;

/**
 * @author Yu
 */
public abstract class CPU {
    public abstract void run();
}
