package DesignPatterns.Factory.AbstractFactory.Screen;

/**
 * @author Yu
 */
public class LCD extends Screen {
    @Override
    public void isScreen() {
        System.out.println("LCD");
    }
}
