package DesignPatterns.Factory.AbstractFactory.Screen;

/**
 * @author Yu
 */
public class OLED extends Screen {
    @Override
    public void isScreen() {
        System.out.println("OLED");
    }
}
