package DesignPatterns.Factory.AbstractFactory.Screen;

/**
 * @author Yu
 */
public abstract class Screen {
    public abstract void isScreen();
}
